[gd_scene load_steps=2 format=3 uid="uid://bea3h14qh8jve"]

[ext_resource type="Script" uid="uid://c3544f3wcfksc" path="res://ui/login_panel.gd" id="1_6a27a"]

[node name="LoginPanel" type="PanelContainer"]
offset_right = 306.0
offset_bottom = 236.0
script = ExtResource("1_6a27a")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Login"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Nombre de usuario:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Username" type="LineEdit" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Contrase√±a:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PasswordContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Password" type="LineEdit" parent="MarginContainer/VBoxContainer/PasswordContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.9
secret = true

[node name="ShowPasswordButton" type="Button" parent="MarginContainer/VBoxContainer/PasswordContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_stretch_ratio = 0.1
text = "üëÅÔ∏è"
tooltip_text = "Mostrar/Ocultar contrase√±a"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 5

[node name="RememberPassword" type="CheckBox" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Recordar contrase√±a"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Submit" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Conectar"

[node name="Reg" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Registrarse"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Submit" to="." method="_OnButtonLoginPressed"]
